--- a/app/src/main/res/layout/fragment_search_primary.xml
+++ b/app/src/main/res/layout/fragment_search_primary.xml
@@ -20,35 +20,32 @@
 
     <EditText
         android:id="@+id/primary_search_edit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="250dp"
         android:background="@drawable/capsule_shape_gray"
         android:drawableRight="@mipmap/ocr_icon"
         android:hint="Search Drugs"
         android:paddingLeft="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/primary_search_btn"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/primary_search_btn"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/primary_search_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="128dp"
+        android:layout_marginBottom="250dp"
         android:background="@drawable/circle_shape_gray"
         android:src="@mipmap/search_icon"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
