--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,5 +9,9 @@
         android:id="@+id/bottom_nav_scan"
         android:icon="@drawable/scan"
         android:title="@string/bottom_nav_scan" />
-
+    <item
+        android:id="@+id/bottom_nav_orders"
+        android:title="@string/bottom_nav_orders"
+        android:icon="@mipmap/order_list_icon"
+        />
 </menu>
