--- a/app/src/main/res/layout/activity_user_search.xml
+++ b/app/src/main/res/layout/activity_user_search.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,3 +22,9 @@
 
     </FrameLayout>
 </android.support.constraint.ConstraintLayout>
+
+    <include android:id="@+id/user_search_progress_wheel"
+        android:visibility="gone"
+        layout="@layout/progress_wheel"/>
+
+</android.support.design.widget.CoordinatorLayout>
