--- a/app/src/main/res/layout/activity_user_setup_settings.xml
+++ b/app/src/main/res/layout/activity_user_setup_settings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<android.support.design.widget.CoordinatorLayout
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -177,3 +182,10 @@
         app:srcCompat="@mipmap/location_icon" />
 
 </android.support.constraint.ConstraintLayout>
+
+
+    <include android:id="@+id/user_setup_progress_wheel"
+        android:visibility="gone"
+        layout="@layout/progress_wheel"/>
+
+</android.support.design.widget.CoordinatorLayout>
